<resources>
    <string name="app_name">CheckoutMobile</string>
    <string name="action_settings">Settings</string>

    <string name="overflow_test">tttttttttttttttttttttttttttttttttttttttttttt</string>
    <string name="cart">Cart</string>
    <string name="name">Potato</string>
    <string name="price">$1222222222222222222.00</string>
    <string name="discount">20% off</string>
    <string name="priced_discounted">$9222222222222222222.60</string>
    <string name="quantity">#</string>
    <string name="stock">Stock 999+</string>
    <string name="total">$28222222222222222222.80</string>

    <string name="checkout">Checkout</string>
    <string name="remove">remove</string>
    <string name="remove_one_description">Remove one from cart</string>
    <string name="add_one_description">Add one to cart</string>
    <string name="enter_item_name_id">Enter Item Name or ID</string>
    <string name="add_item_to_cart">Add Item</string>
    <string name="ok">OK</string>
    <string name="item_dne">Item does not exist!</string>
    <string name="cancel">Cancel</string>
    <string name="pay">Pay</string>
    <string name="data_not_initialized">The checkout and/or item information does not exist!
        Please wait a moment or refresh.</string>
    <string name="cart_empty">Cart is empty!</string>
    <string name="transaction_success">Transaction completed!</string>
    <string name="transaction_with_error">Transaction not fully completed! This is probably caused
        by a server-side stock update. Items left in cart failed to be processed.
        Please review item information and try again.</string>
    <string name="cart_exceed_stock_fix">Cart contains item(s) with a quantity greater than stock.
        The quantity of those items are modified to be maximum amount allowed to be purchased.
        Please review carefully before checking out.</string>
</resources>