<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="72dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="62dp"
        android:layout_height="40dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="175dp"
        android:text="@string/cart"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:autofillHints="@string/enter_item_name_id"
        android:ems="10"
        android:hint="@string/enter_item_name_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/add_item_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="356dp"
        android:layout_height="165dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="355dp"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textSize="23sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/price"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/price_begin_split"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/stock"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/price_margin_split"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="24dp"
                android:autofillHints="@string/enter_item_name_id"
                android:ems="4"
                android:hint="@string/quantity"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageButton3" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="37dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/remove_one_description"
                android:src="@drawable/ic_baseline_minus_1_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextNumber" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="37dp"
                android:layout_height="40dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/add_one_description"
                android:src="@drawable/ic_baseline_plus_1_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/price_margin_split" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginBottom="24dp"
                android:text="@string/total"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/price_begin_split" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
                app:layout_constraintEnd_toStartOf="@+id/price_margin_split"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/priced_discounted"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/textView17"
                app:layout_constraintStart_toStartOf="@+id/price_begin_split"
                app:layout_constraintTop_toBottomOf="@+id/textView15"
                app:layout_constraintVertical_bias="0.105" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/price_begin_split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/price_margin_split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.65" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="409dp"
        android:layout_height="407dp"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>